[package]
name = "wynd"
version = "0.9.4"
edition = "2024"
description = "A simple websocket library for Rust."
license = "MIT"
authors = ["You <guru911u@gmail.com>"]
keywords = ["websocket", "server", "framework", "web"]
categories = ["web-programming::websocket"]
repository = "https://github.com/guru901/wynd"
exclude = [
    "tests/*",
    "docs/*",
    "CONTRIBUTING.md",
    "CHANGELOG.md",
    ".github",
    "scripts",
]

[dependencies]
futures = "0.3.31"
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-tungstenite = "0.28"
hyper-tungstenite = { version = "0.19", optional = true }
hyper-util = { version = "0.1", optional = true }
http-body-util = { version = "0.1.3", optional = true }
ripress = { version = "1.10.0", features = ["with-wynd"], optional = true }


[features]
default = []
with-ripress = [
    "dep:hyper-tungstenite",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:ripress",
]
